2008-02-26	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* lib/src/vncview.cpp:
	- fixed mapFromFramebuffer()-method
	- fixed draw-position for cursor in scaled mode

	* ica/src/demo_client.cpp:
	* ima/src/remote_control_widget.cpp:
	* lib/include/vncview.h:
	* lib/src/vncview.cpp:
	made progress-widget optional - do not use when remote-controlling to
	speed things up

	* ima/src/remote_control_widget.cpp:
	scale logo (which is now rendered larger) to fit into toolbar

	* lib/src/ivs_connection.cpp:
	directly use fastQImage::scaleTo(...) rather than
	fastQImage::scaled(...) to avoid creating temporary images

	* lib/src/fast_qimage.cpp:
	check for format() == Format_Invalid and handle properly

	* lib/include/fast_qimage.h:
	* lib/src/fast_qimage.cpp:
	in fastQImage::scaleTo(...) return reference to destination image for
	convenience

2008-02-25	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/ica.qrc:
	* ica/resources/pl.qm:
	* ica/resources/pl.ts:
	* setup/setup.qrc:
	* setup/resources/pl.qm:
	* setup/resources/pl.ts:
	* ima/italc.qrc:
	* ima/resources/pl.qm:
	* ima/resources/pl.ts:
	* lib/italc_core.qrc:
	* lib/resources/pl.qm:
	* lib/resources/pl.ts:
	added Polish localization-files by Robert Radko <robert/at/radko/dot/pl>

	* ima/src/client.cpp:
	less transparency

2008-02-25	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* setup/resources/page_artwork_welcome.png:
	* ima/italc.qrc:
	* ima/dialogs/client_settings.ui:
	* ima/src/cmd_input_dialog.cpp:
	* ima/data/italc.png:
	* ima/data/italc.xpm:
	* ima/data/italc.ico:
	* ima/resources/demoquality.png:
	* ima/resources/client_settings.png:
	* ima/resources/info_22.png:
	* ima/resources/viewmag.png:
	* ima/resources/no_user.png:
	* ima/resources/adjust_size.png:
	* ima/resources/apply.png:
	* ima/resources/client_add.png:
	* ima/resources/reboot.png:
	* ima/resources/client_remove.png:
	* ima/resources/client_visible.png:
	* ima/resources/clock.png: