@@ -1,5 +1,11 @@
 2008-02-26	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
+	* ica/src/local_system_ica.cpp:
+	* lib/include/local_system.h:
+	* lib/src/local_system.cpp:
+	moved powerDown(), reboot() and logoffUser() to local_system_ica.cpp
+	and made those functions work when no user is logged on under Linux
+
 	* lib/src/vncview.cpp:
 	- fixed mapFromFramebuffer()-method
 	- fixed draw-position for cursor in scaled mode
